# wetterochs-telegram-bot

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_bots.py  start_bots.sh
crud/: sql_queries.py
db/: database.py
utils/: config.py  create_tables.py  mail_fetcher.py  telegram_connector.py
