[tool.poetry]
name = "telegram_bots"
version = "0.2.0"
description = ""
authors = ["Samuel"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.4"
python-dotenv = "^0.17.1"
python-telegram-bot = "^13.6"
bs4 = "^0.0.1"
requests = "^2.25.1"
lxml = "^4.6.3"
plotly = "^4.14.3"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.5b2"
pre-commit = "^2.13.0"
autoflake = "^1.4"

[tool.black]
line-length = 88
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
